inital commit for calculator

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,109 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
+body{
   background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
 }
-
-.App-link {
-  color: #61dafb;
+h1{
+  color:white; 
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.container{
+  height: 660px;
+  width: 600px;
+  background-color: rgb(105, 43, 43);
+  margin:auto;
+  border-color: black;
+  border-style: solid;
+  margin-top: 20px;
+  
+}
+.result{
+  height: 100px;
+  width: 600px;
+  border-color: black;
+  background-color: blue;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+}
+.clear{
+  height: 110px;
+  width: 450px;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  background-color: red;
+}
+.methods{
+  height:447px;
+  width:150px;
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  background-color: green;
+  margin-left: auto;
+  margin-bottom:auto;
+  position: absolute right;
+   margin-top:-113px; 
+  float:right;
+}
+.box{
+  height:110px;
+  width: 150px;
+  border-color:black;
+  border-style: solid;
+  border-width: 1px;
+  text-align:center 
+}
+.num{
+  height:110px;
+  width: 150px;
+  border-color:black;
+  border-style: solid;
+  border-width: 1px;
+  text-align:center 
+}
+.num1{
+  height:115px;
+  width: 300px;
+  border-color:black;
+  border-style: solid;
+  border-width: 1px;
+  text-align:center 
+}
+.numbers{
+  position: absolute;
+  margin-top:1px;
+}
+.row1{
+  height: 110px;
+  width: 450px;
+  background-color: rgb(48, 114, 92);
+  display:flex;
+}
+.row2{
+  height: 110px;
+  width: 450px;
+  background-color: purple;
+  display:flex;
+}
+.row3{
+  height: 110px;
+  width: 450px;
+  background-color: pink;
+  display:flex;
+}
+.row4{
+  height: 115px;
+  width: 600px;
+  background-color: rgb(184, 140, 58);
+  display:flex;
+}
+.equals{
+  
+    height:115px;
+    width: 300px;
+    border-color:black;
+    border-style: solid;
+    border-width: 1px;
+    text-align:center;
+    background-color: green;
+  
 }
